--- a/Src/Our.Umbraco.ezSearch/Web/UI/Views/MacroPartials/ezSearch.cshtml
+++ b/Src/Our.Umbraco.ezSearch/Web/UI/Views/MacroPartials/ezSearch.cshtml
@@ -110,10 +110,11 @@
 
         var criteria2 = criteria.RawQuery(query.ToString());
         var results = searcher.Search(criteria2)
-            .Where(x => !Umbraco.IsProtected(int.Parse(x.Fields["id"]), x.Fields["path"]) ||
-            (Umbraco.IsProtected(int.Parse(x.Fields["id"]), x.Fields["path"]) &&
-                Umbraco.MemberHasAccess(int.Parse(x.Fields["id"]), x.Fields["path"])))
-                .ToList();
+           .Where(x => !Umbraco.IsProtected(int.Parse(x.Fields["id"]), x.Fields["path"]) && Umbraco.Content(int.Parse(x.Fields["id"])).IsVisible() ||
+           (Umbraco.IsProtected(int.Parse(x.Fields["id"]), x.Fields["path"]) &&
+            Umbraco.MemberHasAccess(int.Parse(x.Fields["id"]), x.Fields["path"])) &&
+            Umbraco.Content(int.Parse(x.Fields["id"])).IsVisible())
+            .ToList();
 
         model.AllResults = results;
 
