--- a/Src/Our.Umbraco.ezSearch/Web/UI/Views/MacroPartials/ezSearch.cshtml
+++ b/Src/Our.Umbraco.ezSearch/Web/UI/Views/MacroPartials/ezSearch.cshtml
@@ -113,10 +113,15 @@
         var criteria2 = criteria.RawQuery(query.ToString());
         
         var results = searcher.Search(criteria2)
-           .Where(x => !Umbraco.IsProtected(int.Parse(x.Fields["id"]), x.Fields["path"]) && Umbraco.Content(int.Parse(x.Fields["id"])) != null ||
-           (Umbraco.IsProtected(int.Parse(x.Fields["id"]), x.Fields["path"]) &&
-            Umbraco.MemberHasAccess(int.Parse(x.Fields["id"]), x.Fields["path"])) &&
-            Umbraco.Content(int.Parse(x.Fields["id"])) != null)
+           .Where(x => (
+                !Umbraco.IsProtected(int.Parse(x.Fields["id"]), x.Fields["path"]) ||
+                (
+                    Umbraco.IsProtected(int.Parse(x.Fields["id"]), x.Fields["path"]) &&
+                    Umbraco.MemberHasAccess(int.Parse(x.Fields["id"]), x.Fields["path"])
+                )) && (
+                    (x.Fields["__IndexType"] == UmbracoExamine.IndexTypes.Content && Umbraco.TypedContent(int.Parse(x.Fields["id"])) != null) ||
+                    (x.Fields["__IndexType"] == UmbracoExamine.IndexTypes.Media && Umbraco.TypedMedia(int.Parse(x.Fields["id"])) != null)
+                ))
             .ToList();
 
         model.AllResults = results;
