--- a/Src/Our.Umbraco.ezSearch/Web/UI/Views/MacroPartials/ezSearch.cshtml
+++ b/Src/Our.Umbraco.ezSearch/Web/UI/Views/MacroPartials/ezSearch.cshtml
@@ -55,85 +55,107 @@
     {
         model.SearchFields.Add("umbracoFileName");
     }
-    
+
     // Check the search term isn't empty
-    if(!string.IsNullOrWhiteSpace(model.SearchTerm))
+    if (!string.IsNullOrWhiteSpace(model.SearchTerm))
     {
         // Tokenize the search term
         model.SearchTerms = Tokenize(model.SearchTerm);
-        
+
         // Perform the search
         var searcher = ExamineManager.Instance.SearchProviderCollection["ExternalSearcher"];
-        var criteria = searcher.CreateSearchCriteria();
-        var query = new StringBuilder();
-        query.AppendFormat("-{0}:1 ", model.HideFromSearchField);
-        
-        // Set search path
-        var contentPathFilter = model.RootContentNodeId > 0
-            ? string.Format("__IndexType:{0} +searchPath:{1} -template:0", UmbracoExamine.IndexTypes.Content, model.RootContentNodeId)
-            : string.Format("__IndexType:{0} -template:0", UmbracoExamine.IndexTypes.Content);
-
-        var mediaPathFilter = model.RootMediaNodeId > 0
-            ? string.Format("__IndexType:{0} +searchPath:{1}", UmbracoExamine.IndexTypes.Media, model.RootMediaNodeId)
-            : string.Format("__IndexType:{0}", UmbracoExamine.IndexTypes.Media);
-
-        switch (model.IndexType)
+        Examine.SearchCriteria.ISearchCriteria criteria2 = null;
+        var jumpOut = false;
+        do
         {
-            case UmbracoExamine.IndexTypes.Content:
-                query.AppendFormat("+({0}) ", contentPathFilter);
-                break;
-            case UmbracoExamine.IndexTypes.Media:
-                query.AppendFormat("+({0}) ", mediaPathFilter);
-                break;
-            default:
-                query.AppendFormat("+(({0}) ({1})) ", contentPathFilter, mediaPathFilter);
-                break;
-        }
-        
-        // Ensure page contains all search terms in some way
-        foreach (var term in model.SearchTerms)
-        {
-            var groupedOr = new StringBuilder();
-            foreach (var searchField in model.SearchFields)
+            var criteria = searcher.CreateSearchCriteria();
+            var query = new StringBuilder();
+            query.AppendFormat("-{0}:1 ", model.HideFromSearchField);
+
+            // Set search path
+            var contentPathFilter = model.RootContentNodeId > 0
+                ? string.Format("__IndexType:{0} +searchPath:{1} -template:0", UmbracoExamine.IndexTypes.Content, model.RootContentNodeId)
+                : string.Format("__IndexType:{0} -template:0", UmbracoExamine.IndexTypes.Content);
+
+            var mediaPathFilter = model.RootMediaNodeId > 0
+                ? string.Format("__IndexType:{0} +searchPath:{1}", UmbracoExamine.IndexTypes.Media, model.RootMediaNodeId)
+                : string.Format("__IndexType:{0}", UmbracoExamine.IndexTypes.Media);
+
+            switch (model.IndexType)
             {
-                //check if phrase or keyword
-                bool isPhraseTerm = term.IndexOf(' ') != -1; //contains space - is phrase
-                
-                if (!isPhraseTerm)
-                { 
-                    groupedOr.AppendFormat("{0}:{1}* ", searchField, term);
-                }
-                else
-                {
-                    //lucene phrase searches should be enclosed in quotes and don't support wildcard
-                    groupedOr.AppendFormat(@"{0}:""{1}"" ", searchField, term);
-                }
+                case UmbracoExamine.IndexTypes.Content:
+                    query.AppendFormat("+({0}) ", contentPathFilter);
+                    break;
+                case UmbracoExamine.IndexTypes.Media:
+                    query.AppendFormat("+({0}) ", mediaPathFilter);
+                    break;
+                default:
+                    query.AppendFormat("+(({0}) ({1})) ", contentPathFilter, mediaPathFilter);
+                    break;
             }
-            query.Append("+(" + groupedOr.ToString() + ") ");
-        }
 
-        // Rank content based on positon of search terms in fields
-        for (var i = 0; i < model.SearchFields.Count; i++)
-        {
+            // Ensure page contains all search terms in some way
             foreach (var term in model.SearchTerms)
             {
-                //check if phrase or keyword
-                bool isPhraseTerm = term.IndexOf(' ') != -1; //contains space - is phrase
-                
-                if (!isPhraseTerm)
+                var groupedOr = new StringBuilder();
+                foreach (var searchField in model.SearchFields)
                 {
-                    query.AppendFormat("{0}:{1}*^{2} ", model.SearchFields[i], term, model.SearchFields.Count - i);
+                    //check if phrase or keyword
+                    bool isPhraseTerm = term.IndexOf(' ') != -1; //contains space - is phrase
+
+                    if (!isPhraseTerm)
+                    {
+                        groupedOr.AppendFormat("{0}:{1}* ", searchField, term);
+                    }
+                    else
+                    {
+                        //lucene phrase searches should be enclosed in quotes and don't support wildcard
+                        groupedOr.AppendFormat(@"{0}:""{1}"" ", searchField, term);
+                    }
+                }
+                query.Append("+(" + groupedOr.ToString() + ") ");
+            }
+
+            // Rank content based on positon of search terms in fields
+            for (var i = 0; i < model.SearchFields.Count; i++)
+            {
+                foreach (var term in model.SearchTerms)
+                {
+                    //check if phrase or keyword
+                    bool isPhraseTerm = term.IndexOf(' ') != -1; //contains space - is phrase
+
+                    if (!isPhraseTerm)
+                    {
+                        query.AppendFormat("{0}:{1}*^{2} ", model.SearchFields[i], term, model.SearchFields.Count - i);
+                    }
+                    else
+                    {
+                        //lucene phrase searches should be enclosed in quotes and don't support wildcard
+                        query.AppendFormat(@"{0}:""{1}""^{2} ", model.SearchFields[i], term, model.SearchFields.Count - i);
+                    }
+                }
+            }
+            try
+            {
+                criteria2 = criteria.RawQuery(query.ToString());
+                LogHelper.Debug<string>("[ezSearch] Searching Lucene with the following query: " + querystring);
+            }
+            catch (Exception ex)
+            {
+                if ((ex.InnerException ?? ex) is Lucene.Net.Search.BooleanQuery.TooManyClauses)
+                {
+                    model.SearchTerms = model.SearchTerms.Take(model.SearchTerms.Count() - 1).ToArray();
+                    LogHelper.Debug<string>("[ezSearch] Query Too Long - Reducing Search Terms to: " + model.SearchTerms.Count());
                 }
                 else
                 {
-                    //lucene phrase searches should be enclosed in quotes and don't support wildcard
-                    query.AppendFormat(@"{0}:""{1}""^{2} ", model.SearchFields[i], term, model.SearchFields.Count - i);
+                    LogHelper.Error<string>("[ezSearch] Other Error: " + (ex.InnerException ?? ex).Message, ex);
+                    jumpOut = true;
                 }
             }
         }
+        while (criteria2 == null && model.SearchTerms.Count() > 0 || jumpOut);
 
-        var criteria2 = criteria.RawQuery(query.ToString());
-        
         var results = searcher.Search(criteria2)
            .Where(x => (
                 !Umbraco.IsProtected(int.Parse(x.Fields["id"]), x.Fields["path"]) ||
@@ -151,16 +173,16 @@
         model.TotalResults = results.Count;
         model.TotalPages = (int)Math.Ceiling((decimal)model.TotalResults / model.PageSize);
         model.CurrentPage = Math.Max(1, Math.Min(model.TotalPages, model.CurrentPage));
-        
+
         // Page the results
         model.PagedResults = model.AllResults.Skip(model.PageSize * (model.CurrentPage - 1)).Take(model.PageSize);
 
         LogHelper.Debug<string>("[ezSearch] Searching Lucene with the following query: " + query.ToString());
-        
+
         if (!model.PagedResults.Any())
         {
             // No results found, so render no results view
-            if(model.SearchFormLocation != "none")
+            if (model.SearchFormLocation != "none")
             {
                 @RenderForm(model)
             }
@@ -176,20 +198,20 @@
             @RenderSummary(model)
             @RenderResultsRange(model)
             @RenderResults(model)
-            if(model.TotalPages > 1)
+            if (model.TotalPages > 1)
             {
-                @RenderPager(model)  
+                @RenderPager(model)
             }
             if (model.SearchFormLocation == "bottom" || model.SearchFormLocation == "both")
             {
                 @RenderForm(model)
             }
-        }   
+        }
     }
     else
     {
         // Empty search term so just render the form
-        if(model.SearchFormLocation != "none")
+        if (model.SearchFormLocation != "none")
         {
             @RenderForm(model)
         }
@@ -197,9 +219,9 @@
 }
 
 @*
-==================================================
- Render Functions
-==================================================
+    ==================================================
+     Render Functions
+    ==================================================
 *@
 
 @helper RenderForm(SearchViewModel model)
@@ -219,9 +241,9 @@
 
 @helper RenderResultsRange(SearchViewModel model)
 {
-    var startRecord = ((model.CurrentPage - 1)*model.PageSize) + 1;
+    var startRecord = ((model.CurrentPage - 1) * model.PageSize) + 1;
     var endRecord = Math.Min(model.TotalResults, (startRecord - 1) + model.PageSize);
-    
+
     <div class="ezsearch-result-count">
         <p>@FormatHtml(GetDictionaryValue("[ezSearch] Results Range", "Showing results <strong>{0}</strong> to <strong>{1}</strong>."), startRecord, endRecord)</p>
     </div>
@@ -275,24 +297,33 @@
 {
     <div class="ezsearch-pager">
         <p>
-            @if (model.CurrentPage > 1) {
+            @if (model.CurrentPage > 1)
+            {
                 <a class="prev" href="?q=@(model.SearchTerm)&p=@(model.CurrentPage-1)">@(GetDictionaryValue("[ezSearch] Previous", "Previous"))</a>
-            } else {
+            }
+            else
+            {
                 <span class="prev">@(GetDictionaryValue("[ezSearch] Previous", "Previous"))</span>
             }
-            
+
             @for (var i = 1; i <= model.TotalPages; i++)
             {
-                if(i == model.CurrentPage) {
+                if (i == model.CurrentPage)
+                {
                     <span class="page">@i</span>
-                } else {
+                }
+                else
+                {
                     <a class="page" href="?q=@(model.SearchTerm)&p=@(i)">@i</a>
                 }
             }
 
-            @if (model.CurrentPage < model.TotalPages) {
+            @if (model.CurrentPage < model.TotalPages)
+            {
                 <a class="next" href="?q=@(model.SearchTerm)&p=@(model.CurrentPage + 1)">@(GetDictionaryValue("[ezSearch] Next", "Next"))</a>
-            } else {
+            }
+            else
+            {
                 <span class="next">@(GetDictionaryValue("[ezSearch] Next", "Next"))</span>
             }
         </p>
@@ -311,7 +342,7 @@
     // ==================================================
     //  Helper Functions
     //==================================================
-    
+
     // Cleanse the search term
     public string CleanseSearchTerm(string input)
     {
@@ -332,26 +363,26 @@
     {
         return Highlight(input.ToString(), searchTerms);
     }
-    
+
     // Highlights all occurances of the search terms in a body of text
     public IHtmlString Highlight(string input, IEnumerable<string> searchTerms)
     {
         input = HttpUtility.HtmlDecode(input);
-        
+
         foreach (var searchTerm in searchTerms)
         {
             input = Regex.Replace(input, Regex.Escape(searchTerm), @"<strong>$0</strong>", RegexOptions.IgnoreCase);
         }
-        
+
         return new HtmlString(input);
     }
-    
+
     // Formats a string and returns as HTML
     public IHtmlString FormatHtml(string input, params object[] args)
     {
         return Html.Raw(string.Format(input, args));
     }
-    
+
     // Gets a dictionary value with a fallback
     public string GetDictionaryValue(string key, string fallback)
     {
@@ -375,7 +406,7 @@
         if (truncated.EndsWith("&hellip;"))
         {
             var lastSpaceIndex = truncated.LastIndexOf(' ');
-            if(lastSpaceIndex > 0)
+            if (lastSpaceIndex > 0)
             {
                 truncated = truncated.Substring(0, lastSpaceIndex) + "&hellip;";
             }
@@ -393,13 +424,13 @@
     // Gets a macro parameter in a safe manner with fallback
     public TType GetMacroParam<TType>(PartialViewMacroModel model, string key, Func<string, TType> convert, TType fallback)
     {
-        if(!model.MacroParameters.ContainsKey(key))
+        if (!model.MacroParameters.ContainsKey(key))
         {
             return fallback;
         }
 
         var value = model.MacroParameters[key];
-        if(value == null || value.ToString().Trim() == "")
+        if (value == null || value.ToString().Trim() == "")
         {
             return fallback;
         }
@@ -413,7 +444,7 @@
             return fallback;
         }
     }
-    
+
     // Splits a coma seperated string into a list
     public IList<string> SplitToList(string input)
     {
@@ -421,12 +452,12 @@
             .Select(f => f.Trim())
             .Where(f => !string.IsNullOrEmpty(f))
             .ToList();
-    } 
+    }
 
     // ==================================================
     //  Helper Classes
     //==================================================
-    
+
     public class SearchViewModel
     {
         // Query Parameters
